--- a/custom.html
+++ b/custom.html
@@ -30,10 +30,10 @@
 		<div class="container">
 			<div class="row">
 				<main class="col-md-12">
-
-
-
-					<img src="/404/download.jpg" alt="page not found" >
+					
+						<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Page Not found!!</h1>
+						
+					<img src="/404/W.png" alt="page not found" >
 
 
 
